trying to fix white space issue on about me page

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -10,3 +10,11 @@
 /* .MuiAppBar-root {
   background: white;
 } */
+
+/* .MuiButton-root {
+  margin-right: 5px;
+    margin: 5px 5px;
+    color: "white";
+    display: "block";
+    background-color: "black";
+} */
